--- a/View/Windows/MainWindowAdmin.xaml
+++ b/View/Windows/MainWindowAdmin.xaml
@@ -11,7 +11,7 @@
         WindowStartupLocation="CenterScreen" ResizeMode="NoResize"
         WindowStyle="None">
 
-   <Window.Resources>
+    <Window.Resources>
         <Style TargetType="Button">
             <Setter Property="Width" Value="190"/>
             <Setter Property="Height" Value="35"/>
@@ -31,55 +31,55 @@
     <Window.DataContext>
         <vm:ViewModelWindowAdmin/>
     </Window.DataContext>
-    
-    <Grid Background="#FF00A8FF">
+
+    <Grid Background="#FF2E00FF">
         <Grid.ColumnDefinitions>
+
+
+            <ColumnDefinition Width="500*"/>
             <ColumnDefinition Width="200*"/>
-            <ColumnDefinition Width="900*"/>
         </Grid.ColumnDefinitions>
 
-        <StackPanel Margin="0,20">
-            <fa:ImageAwesome Icon="Solid_UserCircle" Height="70" Foreground="White"/>
+        <StackPanel Margin="0,-18,0,600" Grid.ColumnSpan="2">
             <TextBlock Text="{Binding LoginAdmin}" HorizontalAlignment="Center" 
                        Style="{StaticResource loginUser}" Margin="0,15"/>
         </StackPanel>
-        
+
         <Button Grid.Column="0"
-                Click="Button_Click_WorkTable">
+                Click="Button_Click_WorkTable" Margin="46,0,518,600" RenderTransformOrigin="-0.116,4.5" Height="Auto" Width="Auto">
             <StackPanel Orientation="Horizontal">
                 <fa:FontAwesome Icon="Solid_Database" 
                                 Height="14" Margin="5,0"/>
                 <TextBlock Text="Работа с таблицами" Style="{StaticResource textButton}"
-                           VerticalAlignment="Center"/>
+                           VerticalAlignment="Center" FontSize="20" />
             </StackPanel>
         </Button>
 
-        <Button Grid.Column="0" Margin="0,440,0,0"
+        <Button Grid.Column="0" Margin="458,0,138,600"
                 Click="Button_Click_Settings"
-                Height="45">
+                Height="Auto">
             <StackPanel Orientation="Horizontal">
                 <fa:FontAwesome Icon="Solid_User" 
                                 Height="14" Margin="5,0"/>
                 <TextBlock Text="Аккаунт" TextWrapping="Wrap"
                            Style="{StaticResource textButton}"
-                           VerticalAlignment="Center" Width="100"/>
+                           VerticalAlignment="Center" Width="100" FontSize="20"/>
             </StackPanel>
         </Button>
 
-        <Button Grid.Column="0" Margin="0,550,0,0"
+        <Button Grid.Column="1" Margin="114,0,10,600"
                 Click="Button_Click_Exit"
-                Height="45">
+                Height="Auto">
             <StackPanel Orientation="Horizontal">
                 <fa:FontAwesome Icon="Solid_DoorOpen" 
                                 Height="14" Margin="5,0"/>
                 <TextBlock Text="Выход" TextWrapping="Wrap"
                            Style="{StaticResource textButton}"
-                           VerticalAlignment="Center" Width="100"/>
+                           VerticalAlignment="Center" Width="100" FontSize="20"/>
             </StackPanel>
         </Button>
 
-        <Frame x:Name="frameNavigPage" Background="White"
-               Grid.Column="1" NavigationUIVisibility="Hidden"/>
+        <Frame x:Name="frameNavigPage" Background="CornflowerBlue" NavigationUIVisibility="Hidden" Grid.ColumnSpan="2" Margin="0,76,0,0"/>
 
     </Grid>
 </Window>
